# nickel-tera

./: Cargo.toml  LICENSE  README.md
examples/: example.rs
src/: lib.rs  middleware.rs
templates/: index.tera
